# verilog-flow

./: .gitignore  README.md  verilog.sublime-project
Sublime Settings/: EasyClangComplete.sublime-settings  Guna.sublime-settings  Guna.sublime-theme  Package Control.last-run  Package Control.sublime-settings  Preferences.sublime-settings  StatusBarTime.sublime-settings  SublimeLinter.sublime-settings  TodoReview.sublime-settings
Sublime Settings/Terminus/: Terminus.hidden-color-scheme
bench/cpp/: CMakeLists.txt
bench/cpp/src/: main_blinky.cpp  main_ledwalker.cpp  main_maskbus.cpp  main_ppsi.cpp  main_ppsii.cpp  main_reqwalker.cpp  main_thruwire.cpp  testb.h  uartsim.cpp  uartsim.h
qproj/: Golden.v  subl_template.done  subl_template.qpf  subl_template.qsf  subl_template_assignment_defaults.qdf
qproj/.qsys_edit/: preferences.xml
qproj/db/: .cmp.kpt  prev_cmp_subl_template.qmsg  subl_template_partition_pins.json
qproj/output_files/: subl_template.done  subl_template.fit.rpt  subl_template.fit.summary  subl_template.flow.rpt  subl_template.map.rpt  subl_template.map.summary  subl_template.pin
rtl/: Makefile  helloworld.v  ledwalker.sby  ledwalker.v  maskbus.v  ppsi.v  ppsii.v  reqwalker.v  thruwire.v  txuart.v  txuart2.v
rtl/fizzim/: file_header.txt  fizzim.pl  fizzim.sh  formal.py  txuart2.fzm
